# SP-Simulation

./: .gitattributes  .gitignore  README.md  linkA_rate_analysis.csv  linkA_second_rate_analysis.csv  package.json
docs/: LOCAL-PREVIEW-AND-DEPLOY.md  SP-S-CURRENT-STATE.md
outputs/: WQ3D-DB001-260307_DWG尺寸提取.md  cyl2_linkageA_angles_0_100.csv  cyl2_linkageA_angles_0_100.md  gh_analysis.json  gh_probe.json  index.html  sps_sim  sps_sim.cpp  wq3d_db001_preview_geometry.json  三节臂运动原理记录.md  凌蛛控制_分析报告.md  打开SP-S-C++模拟.command  构建并打开SP-S-Qt模拟.command  构建并打开SP-S原生模拟.command
outputs/sps_qt_gui/: CMakeLists.txt  WINDOWS_PACKAGE.md  package-windows.ps1  sync-html-runtime.sh  一键打包Windows傻瓜包.bat
outputs/sps_qt_gui/assets/: base_local.stl
outputs/sps_qt_gui/src/: GlStageView.cpp  GlStageView.h  GlbWireMesh.cpp  GlbWireMesh.h  HybridStageView.cpp  HybridStageView.h  MainWindow.cpp  MainWindow.h  SpsModel.cpp  SpsModel.h  StageView.cpp  StageView.h  main.cpp
outputs/sps_qt_gui/tools/: convert-base-glb.mjs
scripts/: build-cloudflare-pages.mjs  generate-one-stroke-cuboid-path.mjs  verify-actuator-constraints.mjs  verify-browser.mjs  verify-coordinate-system.mjs  verify-formal-phi-ik.mjs  verify-one-stroke-path.mjs
work/: analyze_dwg.py  analyze_gh.py  check-base-load.mjs  cloudflare-build.test.mjs  export_dwg_preview.py  generate-node-coordinate-diagram.mjs  lingzhu-control.test.mjs  package-lock.json  package.json  preview-arctic.test.mjs  probe_gh.py  qa-cad-preview.mjs  qa-lingzhu.mjs  rebuild-lingzhu-model-fallbacks.mjs  rebuild-single-glb-fallback.mjs  test_sps_qt_gui.sh  (+4 more)
(+90 files in other folders)
